--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  <iframe src="https://www.google.com/ width="800" height="600"></iframe>
+  <iframe src="https://www.google.com/search?q=" width="800" height="600"></iframe>
 
 </body>
 </html>
